[project]
name = "logivan-2"
version = "0.1.0"
description = "Self-healing address resolution system with LLM and RAG"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=3.0.2",
    "llama-index>=0.10.0",
    "llama-index-embeddings-huggingface>=0.1.0",
    "openai>=1.0.0",
]
